<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_fragment_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">

                <View android:background="@drawable/background"
                    android:layout_width="392dp"
                    android:layout_height="850dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp" />

                <ImageView android:src="@drawable/image"
                    android:layout_width="254dp"
                    android:layout_height="254dp"
                    android:layout_marginStart="69dp"
                    android:layout_marginTop="36dp"
                    android:contentDescription="image" />

                <View android:id="@+id/card"
                    android:layout_width="327dp"
                    android:layout_height="509dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="290dp"
                    android:background="@drawable/card_shape" />

                <TextView
                    android:layout_width="94dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="49dp"
                    android:layout_marginTop="298dp"
                    android:fontFamily="Poppins"
                    android:gravity="center"
                    android:text="@string/login_string"
                    android:textColor="@color/login_color"
                    android:textSize="29sp" />

                <!-- FIX OFFSET HERE AND CENTER IT -->
                <RelativeLayout
                    android:layout_marginTop="407dp"
                    android:layout_marginStart="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mail"
                        android:background="@drawable/auth_register_pwd_selector"
                        android:inputType="textEmailAddress"
                        android:layout_marginStart="0dp"
                        android:padding="9dp"
                        android:layout_marginTop="11dp"
                        android:layout_width="294dp"
                        android:layout_height="40dp" />

                    <View
                        android:background="@drawable/auth_rectangle_41_ek5_shape"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="50dp"
                        android:layout_height="21dp" />

                    <TextView
                        android:fontFamily="@font/poppins_medium"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/first_name_color"
                        android:layout_marginStart="-15dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="136dp"
                        android:layout_height="30dp"
                        android:text="@string/enter_your_mail_string"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="490dp"
                    android:layout_marginStart="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/pwd"
                        android:background="@drawable/auth_register_pwd_selector"
                        android:inputType="textPassword"
                        android:layout_marginStart="0dp"
                        android:padding="9dp"
                        android:layout_marginTop="11dp"
                        android:layout_width="294dp"
                        android:layout_height="40dp" />

                    <View
                        android:background="@drawable/auth_rectangle_41_ek5_shape"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="90dp"
                        android:layout_height="21dp" />

                    <TextView
                        android:fontFamily="@font/poppins_medium"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/first_name_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="136dp"
                        android:layout_height="30dp"
                        android:text="@string/enter_your_password_string"
                        />
                </RelativeLayout>

                <RelativeLayout android:id="@+id/signin"
                    android:background="@drawable/rectangle_3_shape"
                    android:layout_marginTop="598dp"
                    android:layout_marginStart="105dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="181dp"
                    android:layout_height="54dp">

                    <TextView
                        android:fontFamily="@font/poppins_medium"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="21sp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_ek1_string" />

                </RelativeLayout>

                <ImageView android:src="@drawable/left_line"
                    android:layout_width="65dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="682dp"
                    android:contentDescription="left_line" />

                <TextView android:text="@string/you_can_also_sign_in_using_string"
                    android:layout_width="180dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="297.5px"
                    android:layout_marginTop="672dp"
                    android:fontFamily="Poppins"
                    android:gravity="center"
                    android:textColor="@color/did_you_forget_your_password___color"
                    android:textSize="13sp" />

                <ImageView android:src="@drawable/right_line"
                    android:layout_width="65dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="287dp"
                    android:layout_marginTop="682dp"
                    android:contentDescription="right_line" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_signin"
                    android:layout_width="181dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="727dp"
                    android:background="@drawable/auth_button"
                    android:gravity="center" />

            </RelativeLayout>
        </RelativeLayout>

        <TextView android:id="@+id/email_or_password_wrong"
            android:visibility="invisible"
            android:fontFamily="@font/poppins_medium"
            android:textSize="9sp"
            android:textColor="@color/email_or_password_wrong_color"
            android:layout_marginStart="69dp"
            android:layout_marginTop="445dp"
            android:layout_width="346.5px"
            android:layout_height="55.5px"
            android:text="@string/email_or_password_wrong_string"
            />

    </RelativeLayout>
</RelativeLayout>