<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_fragment_google"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.GoogleAuthFragment"
    android:visibility="invisible"
    />