...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="Search Posts" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="Location" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="Schedule" />
...
