<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_login_mail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.MailPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/auth_login_mail_mail"
            android:layout_width="246dp"
            android:layout_height="49dp"
            android:layout_marginStart="84dp"
            android:layout_marginEnd="89dp"
            android:layout_marginBottom="60dp"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/auth_login_mail_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/auth_login_mail_password"
            android:layout_width="256dp"
            android:layout_height="60dp"
            android:layout_marginStart="98dp"
            android:layout_marginEnd="103dp"
            android:layout_marginBottom="58dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/auth_login_mail_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/auth_login_mail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="153dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="156dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>